--- a/website/home.html
+++ b/website/home.html
@@ -9,5 +9,6 @@
 <body>
     <h1>Welcome to my website</h1>
     <div><img src="C:\Users\user\Documents\New folder\try\website\home.html" alt=""></div>
+    <h1>tryyy</h1>
 </body>
 </html>
